--- a/Done!/TimelineTableViewCell.xib
+++ b/Done!/TimelineTableViewCell.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11173.2" systemVersion="16A270f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11185.3" systemVersion="16A270f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11143.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11151.4"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idTimelineCell" rowHeight="350" id="KGk-i7-Jjw" customClass="TimelineTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="350"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="idTimelineCell" rowHeight="380" id="KGk-i7-Jjw" customClass="TimelineTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="380"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="349"/>
+                <frame key="frameInset" width="320" height="379"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="acH-wS-jwy">
@@ -30,13 +30,13 @@
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06/05 12:29PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DJc-V2-h8g">
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="33" id="pjW-A0-J7O"/>
+                            <constraint firstAttribute="height" constant="38" id="pjW-A0-J7O"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="19"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yPM-qJ-gpy">
+                    <datePicker contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="yPM-qJ-gpy">
                         <constraints>
                             <constraint firstAttribute="width" id="DCn-e6-tGn"/>
                         </constraints>
@@ -44,15 +44,24 @@
                             <!--2016-08-03 02:30:06 +0000-->
                         </date>
                     </datePicker>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8aC-Xg-025">
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                        <state key="normal" title="Set Date"/>
+                        <connections>
+                            <action selector="setDate:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="dQu-ai-RS9"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="DJc-V2-h8g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="3iU-nm-tYJ"/>
-                    <constraint firstItem="yPM-qJ-gpy" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Vw9-Wp-t5U"/>
+                    <constraint firstItem="8aC-Xg-025" firstAttribute="top" secondItem="yPM-qJ-gpy" secondAttribute="bottom" constant="8" id="407-cV-N8k"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="a47-yl-WlQ"/>
                     <constraint firstItem="acH-wS-jwy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="-33" id="flg-Iq-Wpa"/>
+                    <constraint firstItem="8aC-Xg-025" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="hNQ-fQ-snc"/>
                     <constraint firstItem="acH-wS-jwy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ivG-2B-Iyl"/>
                     <constraint firstItem="DJc-V2-h8g" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="8" id="oGI-uH-JzS"/>
                     <constraint firstItem="DJc-V2-h8g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="p69-62-qfw"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="8aC-Xg-025" secondAttribute="bottom" id="rr2-Ya-fft"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="leading" secondItem="acH-wS-jwy" secondAttribute="trailing" constant="-8" id="wgI-ns-nTz"/>
                     <constraint firstAttribute="bottom" secondItem="acH-wS-jwy" secondAttribute="bottom" constant="8" id="wpd-Tt-tdL"/>
                     <constraint firstItem="yPM-qJ-gpy" firstAttribute="top" secondItem="DJc-V2-h8g" secondAttribute="bottom" constant="8" id="zvL-8o-dxB"/>
@@ -62,6 +71,8 @@
                 <outlet property="collectionView" destination="acH-wS-jwy" id="fh8-Ke-tPg"/>
                 <outlet property="datePicker" destination="yPM-qJ-gpy" id="UCi-IF-IFa"/>
                 <outlet property="pickerWidth" destination="DCn-e6-tGn" id="UUK-Pw-H89"/>
+                <outlet property="setButton" destination="8aC-Xg-025" id="UBJ-BV-Pt2"/>
+                <outlet property="timeLabel" destination="DJc-V2-h8g" id="2kr-aW-ASy"/>
             </connections>
         </tableViewCell>
     </objects>
